--- a/Comp229_Assign02/Content/Site.css
+++ b/Comp229_Assign02/Content/Site.css
@@ -2,6 +2,7 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: tan;
 }
 
 /* Wrapping element */
@@ -28,4 +29,32 @@ textarea {
     .body-content {
         padding: 0;
     }
+}
+.jumbotron {
+    background-image: url('../Assets/womenhealth.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    font-family: 'Coiny', cursive;
+    color:aliceblue;
+
+
+}
+.jumbotron h1 {
+    font-size: 63px;
+     font-family: 'Coiny', cursive;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #FEFAFA;
+    font-family: 'Coiny', cursive;
+    font-weight:900;
+    font-size:28px;
+}
+.btn-priv {
+    color: #000000;
+    background-color: #21d229;
+    border-color: #cccccc;
+}
+.row{
+    font-size:20px;
 }
